# MyApplication

./: build.gradle  gradle.properties
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/admin/fisrtdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: caculate_jni.cpp  native-lib.cpp  samplelib_jni.cpp
app/src/main/java/com/example/admin/fisrtdemo/: ActivityCollector.java  App.java  BaseActivity.java  CustomViewActivity.kt  FirstActivity.java  Fragment1.java  Fragment2.java  Fragment3.java  FruitActivity.java  MainActivity.java  MainActivity.kt  (+5 more)
app/src/main/res/drawable/: chatui_bg_voice_call_brand_type.xml  chatui_bg_voice_call_house_type.xml  chatui_bg_voice_call_sale_type.xml  chatui_icon_voice_right.xml  switch_thumb_off.xml  switch_thumb_on.xml  switch_thumb_selector.xml  switch_track_off.xml  switch_track_on.xml
app/src/main/res/layout/: activity_custom_view.xml  activity_first.xml  activity_fruit.xml  activity_jni_test.xml  activity_main.xml  activity_message.xml  activity_my_listview.xml  activity_page.xml  activity_second.xml  activity_talk.xml  activity_third.xml  activity_voip.xml  chatui_activity_voice_call.xml  chatui_item_tel_small.xml  chatui_voice_call_house_report_card.xml  chatui_voice_call_second_hand_house_card_content.xml  fruit_layout.xml  layout1.xml  layout2.xml  layout3.xml  nav_header.xml  title.xml  view_float.xml  view_item.xml
app/src/main/res/menu/: nav_menu.xml  toolbar.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
(+47 files in other folders)
